--- a/index.html
+++ b/index.html
@@ -341,6 +341,15 @@
 <textarea name="Описание" placeholder="Кратко описание... / Περιγραφή..." required="" rows="4"></textarea>
 <label for="attachment"><strong>📎 Прикачен файл / Επισύναψη αρχείου:</strong></label>
 <input id="attachment" name="attachment" required type="file">
+
+
+
+
+
+<label style="display: block; margin-bottom: 1rem; font-size: 0.95rem;">
+  <input type="checkbox" name="gdpr" required>
+  Съгласен/на съм с <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
+</label>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_captcha" type="hidden" value="false"/>
 </form>
@@ -365,6 +374,11 @@
 <form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST">
 <input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
 <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
+
+<label style="display: block; margin-bottom: 1rem; font-size: 0.95rem;">
+  <input type="checkbox" name="gdpr" required>
+  Съгласен/на съм с <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
+</label>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη"/>
 <input name="_captcha" type="hidden" value="false"/>
