--- a/index.html
+++ b/index.html
@@ -197,6 +197,24 @@ button:hover::after {
 }
 
 @media (max-width: 768px) {
+  
+  10% {
+    opacity: 1;
+  }
+  50% {
+    top: 60%;
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    top: 95%;
+    opacity: 0;
+  }
+}
+
+@media (max-width: 768px) {
   .welcome-text {
     font-size: 1.5rem;
   }
@@ -220,6 +238,9 @@ header {
   color: white;
   z-index: 10;
   animation: scrollVertical 10s linear infinite;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  transform: rotate(180deg);
 }
 
 .welcome-left {
@@ -232,14 +253,14 @@ header {
 
 @keyframes scrollVertical {
   0% {
-    top: -60px;
+    top: -100px;
     opacity: 0;
   }
   10% {
     opacity: 1;
   }
   50% {
-    top: 60%;
+    top: 40%;
     opacity: 1;
   }
   90% {
