--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ header {
 
 .welcome-text {
   position: absolute;
-  font-family: 'Parisienne', cursive;
+  font-family: 'Noto Serif', serif;
   font-size: 2.2rem;
   white-space: nowrap;
   color: white;
@@ -374,7 +374,8 @@ header {
     top: 10px;
   }
 }
-</style><link href="https://fonts.googleapis.com/css2?family=Parisienne&amp;display=swap" rel="stylesheet"/></head>
+</style><link href="https://fonts.googleapis.com/css2?family=Parisienne&amp;display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet"/>
+</head>
 <body>
 <header><span class="welcome-text welcome-right">Καλώς ήρθατε</span><span class="welcome-text welcome-left">Добре дошли</span>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
