--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@ header {
 <body>
 <header><span class="welcome-text welcome-right">Καλώς ήρθατε</span><span class="welcome-text welcome-left">Добре дошли</span>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
-<h1>Пламен Асенов Моллов</h1>
-<h2><strong>Заклет преводач от и на гръцки език с над 17 години опит и истинска любов към езика</strong></h2>
+<h1>Заклет преводач от и на гръцки език – Пламен Асенов Моллов</h1>
+<h2><strong>Над 17 години опит в устни и писмени преводи, легализации и консултации в България и Гърция</strong></h2>
 </header>
 <nav>
 <div class="menu-toggle">
@@ -470,7 +470,7 @@ header {
 <li>📝 Συμβουλές και μετάφραση συμβολαίων και νομικών εγγράφων</li>
 <li>💼 Έκδοση ΑΦΜ (φορολογικού αριθμού) στην εφορία</li>
 <li>🤝 Συνοδεία σε συμβολαιογράφους, δικηγόρους, λογιστές ή κτηματομεσίτες</li>
-<li>📄 Ερμηνεία και επικύρωση απαιτούμενων εγγράφων</li>
+<li>📄 Μετάφραση και επικύρωση απαιτούμενων εγγράφων</li>
 </ul>
 <p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
