--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ button:active {
   transform: scale(0.96);
 }
 button:hover::after {
-  content: " 👋";
+  content: " 👌";
   position: absolute;
   right: -2rem;
   animation: wave 1s infinite;
@@ -209,7 +209,7 @@ button:hover::after {
     opacity: 1;
   }
   100% {
-    top: 95%;
+    top: 100%;
     opacity: 0;
   }
 }
@@ -253,7 +253,7 @@ header {
 
 @keyframes scrollVertical {
   0% {
-    top: -100px;
+    top: -100%;
     opacity: 0;
   }
   10% {
@@ -267,7 +267,7 @@ header {
     opacity: 1;
   }
   100% {
-    top: 95%;
+    top: 100%;
     opacity: 0;
   }
 }
