--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@ header {
 <body>
 <header><span class="welcome-text welcome-right">Καλώς ήρθατε</span><span class="welcome-text welcome-left">Добре дошли</span>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
-<h1>Заклет преводач от и на гръцки език – Пламен Асенов Моллов</h1>
-<h2><strong>Над 17 години опит в устни и писмени преводи, легализации и консултации в България и Гърция</strong></h2>
+<h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
+<h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
 <nav>
 <div class="menu-toggle">
