--- a/index.html
+++ b/index.html
@@ -251,11 +251,18 @@ header {
   right: 10px;
 }
 
+
 @keyframes scrollVertical {
   0% {
     top: -100%;
-    opacity: 0;
+    opacity: 1;
   }
+  100% {
+    top: 100%;
+    opacity: 1;
+  }
+}
+
   10% {
     opacity: 1;
   }
