--- a/index.html
+++ b/index.html
@@ -214,9 +214,7 @@ button:hover::after {
   }
 }
 
-@media (max-width: 768px) {
-  .welcome-text {
-    font-size: 1.5rem;
+@media (max-width: 768px) {.welcome-text { font-size: 1.1rem;
   }
 }
 
@@ -279,9 +277,7 @@ header {
   }
 }
 
-@media (max-width: 768px) {
-  .welcome-text {
-    font-size: 1.5rem;
+@media (max-width: 768px) {.welcome-text { font-size: 1.1rem;
   }
 }
 
@@ -375,9 +371,7 @@ header {
   50% { opacity: 1; transform: translateY(0); }
 }
 
-@media (max-width: 768px) {
-  .welcome-text {
-    font-size: 1.5rem;
+@media (max-width: 768px) {.welcome-text { font-size: 1.1rem;
     top: 10px;
   }
 }
