--- a/index.html
+++ b/index.html
@@ -281,6 +281,15 @@ header {
   }
 }
 
+
+@media (max-width: 768px) {
+  .welcome-text {
+    font-size: 1.1rem !important;
+    font-weight: 400 !important;
+    opacity: 0.85 !important;
+  }
+}
+
 </style>
 <style>
   .menu-toggle {
