--- a/index.html
+++ b/index.html
@@ -505,6 +505,7 @@ header {
   Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
 </label>
 <button type="submit">Изпрати / Αποστολή</button>
+<input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html">
 <input name="_captcha" type="hidden" value="false"/>
 </form>
 </div>
@@ -534,6 +535,7 @@ header {
 </label>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη"/>
+<input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html">
 <input name="_captcha" type="hidden" value="false"/>
 </form>
 </div>
