--- a/thanks.html
+++ b/thanks.html
@@ -1,37 +1,44 @@
-
 <!DOCTYPE html>
 <html lang="bg">
 <head>
-  <meta charset="UTF-8" />
-  <title>Благодарим за мнението!</title>
+  <meta charset="UTF-8">
+  <title>Благодаря / Ευχαριστώ!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f0f8ff;
+      background: #f0f8ff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      color: #003366;
       text-align: center;
-      padding: 5rem;
+      padding: 1rem;
     }
     h1 {
-      color: #003366;
       font-size: 2.5rem;
+      margin-bottom: 1rem;
     }
     p {
       font-size: 1.2rem;
+      max-width: 600px;
+      margin-bottom: 2rem;
     }
     a {
-      display: inline-block;
-      margin-top: 2rem;
-      background-color: #003366;
-      color: white;
-      padding: 1rem 2rem;
-      text-decoration: none;
-      border-radius: 6px;
+      color: #003366;
+      text-decoration: underline;
+      margin-top: 1rem;
+      font-size: 1.1rem;
     }
   </style>
 </head>
 <body>
-  <h1>Благодарим ви за вашето мнение!</h1>
-  <p>Получихме съобщението ви и ще го разгледаме с внимание.</p>
-  <a href="index.html">⬅️ Обратно към началната страница</a>
+  <h1>Благодарим Ви! / Ευχαριστούμε!</h1>
+  <p>Вашето съобщение беше изпратено успешно. Ще се свържем с Вас възможно най-скоро.</p>
+  <p>Το μήνυμά σας στάλθηκε με επιτυχία. Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατόν.</p>
+  <a href="index.html">⬅️ Обратно към началната страница / Επιστροφή στην αρχική σελίδα</a>
 </body>
 </html>
