--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ button:hover::after {
   }
 }
 
-@media (max-width: 768px) {.welcome-text { font-size: 1.1rem;
+@media (max-width: 768px) {.welcome-text { font-size: 1.1rem; animation-duration: 5s !important;
   }
 }
 
@@ -251,6 +251,8 @@ header {
 
 
 @keyframes scrollVertical {
+  0% { top: -80%; opacity: 1; }
+  100% { top: 100%; opacity: 1; }
   0% {
     top: -100%;
     opacity: 1;
@@ -277,7 +279,7 @@ header {
   }
 }
 
-@media (max-width: 768px) {.welcome-text { font-size: 1.1rem;
+@media (max-width: 768px) {.welcome-text { font-size: 1.1rem; animation-duration: 5s !important;
   }
 }
 
@@ -380,7 +382,7 @@ header {
   50% { opacity: 1; transform: translateY(0); }
 }
 
-@media (max-width: 768px) {.welcome-text { font-size: 1.1rem;
+@media (max-width: 768px) {.welcome-text { font-size: 1.1rem; animation-duration: 5s !important;
     top: 10px;
   }
 }
