--- a/index.html
+++ b/index.html
@@ -214,9 +214,7 @@ button:hover::after {
   }
 }
 
-@media (max-width: 768px) {.welcome-text { font-size: 1.1rem; animation-duration: 5s !important;
-  }
-}
+
 
 
 header {
@@ -235,7 +233,7 @@ header {
   white-space: nowrap;
   color: white;
   z-index: 10;
-  animation: scrollVertical 10s linear infinite;
+  animation: scrollVertical 10s linear infinite; animation-delay: 0s;
   writing-mode: vertical-rl;
   text-orientation: mixed;
   transform: rotate(180deg);
@@ -279,9 +277,7 @@ header {
   }
 }
 
-@media (max-width: 768px) {.welcome-text { font-size: 1.1rem; animation-duration: 5s !important;
-  }
-}
+
 
 
 @media (max-width: 768px) {
@@ -289,6 +285,15 @@ header {
     font-size: 1.1rem !important;
     font-weight: 400 !important;
     opacity: 0.85 !important;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .welcome-text {
+    animation-duration: 12s !important;
+    animation-delay: 0s !important;
+    opacity: 1 !important;
   }
 }
 
@@ -345,6 +350,15 @@ header {
   100% { transform: translateY(-10px); opacity: 0; }
 }
 
+
+@media (max-width: 768px) {
+  .welcome-text {
+    animation-duration: 12s !important;
+    animation-delay: 0s !important;
+    opacity: 1 !important;
+  }
+}
+
 </style>
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -382,10 +396,16 @@ header {
   50% { opacity: 1; transform: translateY(0); }
 }
 
-@media (max-width: 768px) {.welcome-text { font-size: 1.1rem; animation-duration: 5s !important;
-    top: 10px;
+
+
+@media (max-width: 768px) {
+  .welcome-text {
+    animation-duration: 12s !important;
+    animation-delay: 0s !important;
+    opacity: 1 !important;
   }
 }
+
 </style><link href="https://fonts.googleapis.com/css2?family=Parisienne&amp;display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet"/>
 </head>
 <body>
