--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ header {
 <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
 <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
-<form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST">
+<form action="https://formspree.io/f/moqgrknj" method="POST" enctype="multipart/form-data">
 <input type="hidden" name="_next" value="https://www.prevodigr.eu/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 <input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
@@ -562,8 +562,7 @@ header {
   Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
 </label>
 <button type="submit">Изпрати / Αποστολή</button>
-<input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html">
-<input name="_captcha" type="hidden" value="false"/>
+
 </form>
 </div>
 </p></section>
@@ -583,7 +582,7 @@ header {
 </div>
 <div style="margin-top: 2rem;">
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
-<form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST">
+<form action="https://formspree.io/f/moqgrknj" method="POST" enctype="multipart/form-data">
 <input type="hidden" name="_next" value="https://www.prevodigr.eu/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 <input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
@@ -594,8 +593,7 @@ header {
 </label>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη"/>
-<input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html">
-<input name="_captcha" type="hidden" value="false"/>
+
 </form>
 </div>
 </section>
@@ -609,5 +607,27 @@ header {
 <p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
 <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  const forms = document.querySelectorAll("form[action*='formspree.io']");
+  forms.forEach(form => {
+    const button = form.querySelector('button[type="submit"]');
+    const fileInput = form.querySelector('input[type="file"]');
+
+    form.addEventListener("submit", function (e) {
+      if (fileInput && fileInput.files.length > 0 && fileInput.files[0].size > 10 * 1024 * 1024) {
+        e.preventDefault();
+        alert("Файлът е твърде голям. Моля, прикачете файл до 10MB.");
+        return;
+      }
+      button.disabled = true;
+      button.innerText = "Изпраща се...";
+      button.style.opacity = "0.6";
+    });
+  });
+});
+</script>
+
 </body>
 </html>
