--- a/thanks.html
+++ b/thanks.html
@@ -1,44 +1,47 @@
+
 <!DOCTYPE html>
 <html lang="bg">
 <head>
   <meta charset="UTF-8">
-  <title>Благодаря / Ευχαριστώ!</title>
+  <title>Благодаря / Ευχαριστούμε</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
       background: #f0f8ff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
       margin: 0;
-      color: #003366;
       text-align: center;
-      padding: 1rem;
     }
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+      color: #003366;
     }
     p {
       font-size: 1.2rem;
       max-width: 600px;
-      margin-bottom: 2rem;
     }
     a {
-      color: #003366;
-      text-decoration: underline;
-      margin-top: 1rem;
-      font-size: 1.1rem;
+      margin-top: 2rem;
+      display: inline-block;
+      background-color: #003366;
+      color: white;
+      padding: 0.7rem 1.5rem;
+      border-radius: 6px;
+      text-decoration: none;
+    }
+    a:hover {
+      background-color: #0055a5;
     }
   </style>
 </head>
 <body>
-  <h1>Благодарим Ви! / Ευχαριστούμε!</h1>
-  <p>Вашето съобщение беше изпратено успешно. Ще се свържем с Вас възможно най-скоро.</p>
-  <p>Το μήνυμά σας στάλθηκε με επιτυχία. Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατόν.</p>
-  <a href="index.html">⬅️ Обратно към началната страница / Επιστροφή στην αρχική σελίδα</a>
+  <h1>Благодаря! / Ευχαριστούμε!</h1>
+  <p>Вашето съобщение беше успешно изпратено. Ще се свържем с Вас възможно най-скоро.<br>
+     Το μήνυμά σας στάλθηκε με επιτυχία. Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατόν.</p>
+  <a href="index.html">Обратно към началната страница / Επιστροφή στην αρχική σελίδα</a>
 </body>
 </html>
