--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ header {
 <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
 <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
-<form action="https://formspree.io/f/moqgrknj" method="POST" enctype="multipart/form-data">
+<form action="https://formspree.io/f/movwnrdg" method="POST" enctype="multipart/form-data">
 <input type="hidden" name="_next" value="https://www.prevodigr.eu/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 <input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
@@ -582,7 +582,7 @@ header {
 </div>
 <div style="margin-top: 2rem;">
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
-<form action="https://formspree.io/f/moqgrknj" method="POST" enctype="multipart/form-data">
+<form action="https://formspree.io/f/movwnrdg" method="POST" enctype="multipart/form-data">
 <input type="hidden" name="_next" value="https://www.prevodigr.eu/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 <input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
