--- a/thanks.html
+++ b/thanks.html
@@ -3,45 +3,54 @@
 <html lang="bg">
 <head>
   <meta charset="UTF-8">
-  <title>Благодаря / Ευχαριστούμε</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Благодарим / Ευχαριστούμε</title>
   <style>
     body {
-      background: #f0f8ff;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
+      background: linear-gradient(to bottom, #ffffff, #f0f8ff);
+      color: #003366;
       text-align: center;
+      padding: 2rem;
     }
     h1 {
-      color: #003366;
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
     }
     p {
       font-size: 1.2rem;
-      max-width: 600px;
+      margin-bottom: 2rem;
     }
-    a {
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    }
+    .back-link {
       margin-top: 2rem;
       display: inline-block;
+      padding: 0.8rem 1.4rem;
       background-color: #003366;
       color: white;
-      padding: 0.7rem 1.5rem;
-      border-radius: 6px;
       text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
     }
-    a:hover {
+    .back-link:hover {
       background-color: #0055a5;
     }
   </style>
 </head>
 <body>
-  <h1>Благодаря! / Ευχαριστούμε!</h1>
-  <p>Вашето съобщение беше успешно изпратено. Ще се свържем с Вас възможно най-скоро.<br>
-     Το μήνυμά σας στάλθηκε με επιτυχία. Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατόν.</p>
-  <a href="index.html">Обратно към началната страница / Επιστροφή στην αρχική σελίδα</a>
+
+  <h1>Благодарим Ви! 🙏 / Ευχαριστούμε!</h1>
+  <p>Получихме Вашето съобщение. Ще се свържем с Вас възможно най-скоро. <br>Λάβαμε το μήνυμά σας. Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατό.</p>
+
+  <img src="thankyou-image.jpg" alt="България и Гърция - приятелство чрез езика">
+
+  <br>
+  <a href="index.html" class="back-link">⬅ Обратно към началната страница</a>
+
 </body>
 </html>
