--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ header {
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
 <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
 <form action="https://formspree.io/f/movwnrdg" method="POST" enctype="multipart/form-data">
-<input type="hidden" name="_next" value="https://www.prevodigr.eu/thanks.html">
+<input type="hidden" name="_next" value="thanks.html">
 <input type="hidden" name="_captcha" value="false">
 <input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
 <input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
@@ -583,7 +583,7 @@ header {
 <div style="margin-top: 2rem;">
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
 <form action="https://formspree.io/f/movwnrdg" method="POST" enctype="multipart/form-data">
-<input type="hidden" name="_next" value="https://www.prevodigr.eu/thanks.html">
+<input type="hidden" name="_next" value="thanks.html">
 <input type="hidden" name="_captcha" value="false">
 <input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
 <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
