--- a/index.html
+++ b/index.html
@@ -549,7 +549,6 @@ header {
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
 <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
 <form action="https://formspree.io/f/movwnrdg" method="POST" enctype="multipart/form-data">
-<input type="hidden" name="_next" value="thanks.html">
 <input type="hidden" name="_captcha" value="false">
 <input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
 <input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
@@ -583,7 +582,6 @@ header {
 <div style="margin-top: 2rem;">
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
 <form action="https://formspree.io/f/movwnrdg" method="POST" enctype="multipart/form-data">
-<input type="hidden" name="_next" value="thanks.html">
 <input type="hidden" name="_captcha" value="false">
 <input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
 <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
@@ -608,6 +606,7 @@ header {
 <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
 
+
 <script>
 document.addEventListener("DOMContentLoaded", function () {
   const forms = document.querySelectorAll("form[action*='formspree.io']");
@@ -616,18 +615,46 @@ document.addEventListener("DOMContentLoaded", function () {
     const fileInput = form.querySelector('input[type="file"]');
 
     form.addEventListener("submit", function (e) {
+      e.preventDefault();
+
       if (fileInput && fileInput.files.length > 0 && fileInput.files[0].size > 10 * 1024 * 1024) {
-        e.preventDefault();
         alert("Файлът е твърде голям. Моля, прикачете файл до 10MB.");
         return;
       }
+
       button.disabled = true;
       button.innerText = "Изпраща се...";
       button.style.opacity = "0.6";
+
+      const data = new FormData(form);
+      fetch(form.action, {
+        method: form.method,
+        body: data,
+        headers: {
+          'Accept': 'application/json'
+        }
+      })
+      .then(response => {
+        if (response.ok) {
+          window.location.href = "thanks.html";
+        } else {
+          alert("Възникна грешка при изпращането. Моля, опитайте отново.");
+          button.disabled = false;
+          button.innerText = "Изпрати / Αποστολή";
+          button.style.opacity = "1";
+        }
+      })
+      .catch(error => {
+        alert("Възникна грешка при изпращането.");
+        button.disabled = false;
+        button.innerText = "Изпрати / Αποστολή";
+        button.style.opacity = "1";
+      });
     });
   });
 });
 </script>
+
 
 </body>
 </html>
