--- a/index.html
+++ b/index.html
@@ -546,30 +546,88 @@ header {
 <p style="text-align: justify;">
 <p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
 <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
-<div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
-<h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
+<div style="margin-top: 2rem; border-top: 2px solid #ccc; padding: 2rem; background-color: #f4f8ff; border-radius: 10px;">
+  <h3 style="color:#003366; font-size: 1.5rem; margin-bottom: 1rem;">
+    Как да заявите оферта за превод / Πώς να ζητήσετε προσφορά
+  </h3>
+  <p style="font-size: 1rem; color:#003366;">
+    Следвайте стъпките по-долу, за да ни изпратите Вашата заявка:<br/>
+    Ακολουθήστε τα παρακάτω βήματα για να μας στείλετε το αίτημά σας:
+  </p>
 
-<form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST" enctype="multipart/form-data">
-  <input type="hidden" name="_next" value="thanks.html">
-  <input type="hidden" name="_captcha" value="false">
+  <div style="display: grid; gap: 1rem; margin-top: 1.5rem;">
+    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
+      <strong style="color: #00509d;">Стъпка 1 / Βήμα 1:</strong><br/>
+      Отворете Вашия имейл клиент (Gmail, Hotmail и др.)<br/>
+      Ανοίξτε το email σας (Gmail, Hotmail κ.ά.)
+    </div>
 
-  <input name="Име и фамилия" type="text" placeholder="Име и фамилия / Ονοματεπώνυμο" required>
-  <input name="Имейл" type="email" placeholder="Имейл адрес / Email" required>
-  <input name="Телефон" type="tel" placeholder="Телефон / Τηλέφωνο" required>
-  <textarea name="Описание" rows="4" placeholder="Кратко описание... / Περιγραφή..." required></textarea>
+    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
+      <strong style="color: #00509d;">Стъпка 2 / Βήμα 2:</strong><br/>
+      Въведете нашия имейл адрес: <strong>mollovplamen@gmail.com</strong><br/>
+      Πληκτρολογήστε το email μας: <strong>mollovplamen@gmail.com</strong>
+    </div>
 
-  <label for="attachment"><strong>📎 Прикачен файл / Επισύναψη αρχείου:</strong></label>
-  <input id="attachment" name="attachment" type="file" required>
+    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
+      <strong style="color: #00509d;">Стъпка 3 / Βήμα 3:</strong><br/>
+      Напишете Вашето име, телефон и кратко описание<br/>
+      Γράψτε το όνομά σας, τηλέφωνο και περιγραφή
+    </div>
 
-  <label class="gdpr-label">
-    <input type="checkbox" name="gdpr" required>
-    Съгласен/на съм / Συμφωνώ с <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
-  </label>
+    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
+      <strong style="color: #00509d;">Стъпка 4 / Βήμα 4:</strong><br/>
+      Прикачете файла за превод<br/>
+      Επισυνάψτε το αρχείο για μετάφραση
+    </div>
 
-  <button type="submit">Изпрати / Αποστολή</button>
-</form>
+    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
+      <strong style="color: #00509d;">Стъпка 5 / Βήμα 5:</strong><br/>
+      Изпратете имейла<br/>
+      Στείλτε το email
+    </div>
+  </div>
 
+  
+<div style="margin-top: 2rem;">
+  <button onclick="copyEmail()" style="background-color: #003366; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
+    Копирай имейла / Αντιγραφή email
+  </button>
+  <a href="https://outlook.live.com/mail/0/" target="_blank">
+    <button type="button" style="background-color: #0078d7; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
+      Отвори Hotmail / Άνοιγμα Hotmail
+    </button>
+  </a>
+  <a href="https://mail.google.com" target="_blank">
+    <button type="button" style="background-color: #00509d; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
+      Отвори Gmail / Άνοιγμα Gmail
+    </button>
+  </a>
+  <a href="https://mail.yahoo.com" target="_blank">
+    <button type="button" style="background-color: #720e9e; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
+      Отвори Yahoo / Άνοιγμα Yahoo
+    </button>
+  </a>
+  <a href="https://www.abv.bg" target="_blank">
+    <button type="button" style="background-color: #339933; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; font-size: 1rem;">
+      Отвори ABV / Άνοιγμα ABV
+    </button>
+  </a>
 </div>
+
+
+  </div>
+</div>
+
+<script>
+  function copyEmail() {
+    const email = "mollovplamen@gmail.com";
+    navigator.clipboard.writeText(email).then(function() {
+      alert("Имейлът е копиран! / Το email αντιγράφηκε!");
+    }, function(err) {
+      alert("Грешка при копиране.");
+    });
+  }
+</script>
 </p></section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
