--- a/index.html
+++ b/index.html
@@ -546,6 +546,7 @@ header {
 <p style="text-align: justify;">
 <p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
 <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
+
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding: 2rem; background-color: #f4f8ff; border-radius: 10px;">
   <h3 style="color:#003366; font-size: 1.5rem; margin-bottom: 1rem;">
     Как да заявите оферта за превод / Πώς να ζητήσετε προσφορά
@@ -587,34 +588,30 @@ header {
     </div>
   </div>
 
-  
-<div style="margin-top: 2rem;">
-  <button onclick="copyEmail()" style="background-color: #003366; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
-    Копирай имейла / Αντιγραφή email
-  </button>
-  <a href="https://outlook.live.com/mail/0/" target="_blank">
-    <button type="button" style="background-color: #0078d7; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
-      Отвори Hotmail / Άνοιγμα Hotmail
+  <div style="margin-top: 2rem;">
+    <button onclick="copyEmail()" style="background-color: #003366; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
+      Копирай имейла / Αντιγραφή email
     </button>
-  </a>
-  <a href="https://mail.google.com" target="_blank">
-    <button type="button" style="background-color: #00509d; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
-      Отвори Gmail / Άνοιγμα Gmail
-    </button>
-  </a>
-  <a href="https://mail.yahoo.com" target="_blank">
-    <button type="button" style="background-color: #720e9e; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
-      Отвори Yahoo / Άνοιγμα Yahoo
-    </button>
-  </a>
-  <a href="https://www.abv.bg" target="_blank">
-    <button type="button" style="background-color: #339933; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; font-size: 1rem;">
-      Отвори ABV / Άνοιγμα ABV
-    </button>
-  </a>
-</div>
-
-
+    <a href="https://outlook.live.com/mail/0/" target="_blank">
+      <button type="button" style="background-color: #0078d7; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
+        Отвори Hotmail / Άνοιγμα Hotmail
+      </button>
+    </a>
+    <a href="https://mail.google.com" target="_blank">
+      <button type="button" style="background-color: #00509d; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
+        Отвори Gmail / Άνοιγμα Gmail
+      </button>
+    </a>
+    <a href="https://www.abv.bg" target="_blank">
+      <button type="button" style="background-color: #339933; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; margin-right: 2rem; font-size: 1rem;">
+        Отвори ABV / Άνοιγμα ABV
+      </button>
+    </a>
+    <a href="https://mail.yahoo.com" target="_blank">
+      <button type="button" style="background-color: #720e9e; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; font-size: 1rem;">
+        Отвори Yahoo / Άνοιγμα Yahoo
+      </button>
+    </a>
   </div>
 </div>
 
@@ -628,6 +625,7 @@ header {
     });
   }
 </script>
+
 </p></section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
