--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ header {
   }
 }
 
-</style><link href="https://fonts.googleapis.com/css2?family=Parisienne&amp;display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet"/>
+</style><link href="https://fonts.googleapis.com/css2?family=Parisienne&amp;display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css2?family=Noto+Serif&amp;display=swap" rel="stylesheet"/>
 </head>
 <body>
 <header><span class="welcome-text welcome-right">Καλώς ήρθατε</span><span class="welcome-text welcome-left">Добре дошли</span>
@@ -537,93 +537,21 @@ header {
 <p><strong><a href="https://www.dimokritosrealestate.gr/" rel="noopener noreferrer" target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p>
 </section>
 <section id="prices">
-<h2 class="section-title">Цени / Τιμές</h2>
-<p style="text-align: justify;">
-<p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
-<p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
-
-<div style="margin-top: 2rem; border-top: 2px solid #ccc; padding: 2rem; background-color: #f4f8ff; border-radius: 10px;">
-  <h3 style="color:#003366; font-size: 1.5rem; margin-bottom: 1rem;">
-    Как да заявите оферта за превод? / Πώς να ζητήσετε προσφορά;
-  </h3>
-  <p style="font-size: 1rem; color:#003366;">
-    Следвайте стъпките по-долу, за да ни изпратите Вашата заявка:<br/>
-    Ακολουθήστε τα παρακάτω βήματα για να μας στείλετε το αίτημά σας:
-  </p>
-
-  <div style="display: grid; gap: 1rem; margin-top: 1.5rem;">
-    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
-      <strong style="color: #00509d;">Стъпка 1 / Βήμα 1:</strong><br/>
-      Отворете Вашия имейл клиент (Gmail, Hotmail и др.)<br/>
-      Ανοίξτε το email σας (Gmail, Hotmail κ.ά.)
-    </div>
-
-    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
-      <strong style="color: #00509d;">Стъпка 2 / Βήμα 2:</strong><br/>
-      Въведете нашия имейл адрес: <strong>mollovplamen@gmail.com</strong><br/>
-      Πληκτρολογήστε το email μας: <strong>mollovplamen@gmail.com</strong><br/><br/>
-  <button onclick="copyEmail()" style="background-color: #003366; color: white; padding: 0.6rem 1.2rem; border: none; border-radius: 6px; font-size: 1rem;">
-    Копирай имейла / Αντιγραφή email
-  </button>
-    </div>
-
-    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
-      <strong style="color: #00509d;">Стъпка 3 / Βήμα 3:</strong><br/>
-      Напишете Вашето име, телефон и кратко описание<br/>
-      Γράψτε το όνομά σας, τηλέφωνο και περιγραφή
-    </div>
-
-    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
-      <strong style="color: #00509d;">Стъпка 4 / Βήμα 4:</strong><br/>
-      Прикачете файла за превод<br/>
-      Επισυνάψτε το αρχείο για μετάφραση
-    </div>
-
-    <div style="background-color: white; border-left: 4px solid #00509d; padding: 1rem; border-radius: 6px;">
-      <strong style="color: #00509d;">Стъпка 5 / Βήμα 5:</strong><br/>
-      Изпратете имейла<br/>
-      Στείλτε το email
-    </div>
-  </div>
-
-  
-<div style="margin-top: 2rem; display: flex; flex-wrap: wrap; gap: 1rem;">
-  <a href="https://outlook.live.com/mail/0/" target="_blank">
-    <button type="button" style="background-color: #0078d7; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; font-size: 1rem; min-width: 160px;">
-      Отвори Hotmail / Άνοιγμα Hotmail
-    </button>
-  </a>
-  <a href="https://mail.google.com" target="_blank">
-    <button type="button" style="background-color: #00509d; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; font-size: 1rem; min-width: 160px;">
-      Отвори Gmail / Άνοιγμα Gmail
-    </button>
-  </a>
-  <a href="https://www.abv.bg" target="_blank">
-    <button type="button" style="background-color: #339933; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; font-size: 1rem; min-width: 160px;">
-      Отвори ABV / Άνοιγμα ABV
-    </button>
-  </a>
-  <a href="https://mail.yahoo.com" target="_blank">
-    <button type="button" style="background-color: #720e9e; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 6px; font-size: 1rem; min-width: 160px;">
-      Отвори Yahoo / Άνοιγμα Yahoo
-    </button>
-  </a>
-</div>
-
-</div>
-
-<script>
-  function copyEmail() {
-    const email = "mollovplamen@gmail.com";
-    navigator.clipboard.writeText(email).then(function() {
-      alert("Имейлът е копиран! / Το email αντιγράφηκε!");
-    }, function(err) {
-      alert("Грешка при копиране.");
-    });
-  }
-</script>
-
-</p></section>
+<h2 class="section-title">Заявете превод сега / Ζητήστε προσφορά μετάφρασης τώρα</h2>
+<form action="https://formbold.com/s/3OGZ0" enctype="multipart/form-data" method="POST"><input name="disableCaptcha" type="hidden" value="true"/>
+<input name="Име / Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
+<input name="Имейл / Email" placeholder="Вашият имейл / Το email σας" required="" type="email"/>
+<input name="Телефон / Τηλέφωνο" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
+<textarea name="Описание / Περιγραφή" placeholder="Опишете какво желаете / Περιγράψτε τι χρειάζεστε" required="" rows="4"></textarea>
+<input name="Файл / Αρχείο" required="" type="file"/>
+<label class="gdpr-label">
+<input name="gdpr" required="" type="checkbox"/>
+        Съгласен/на съм / Συμφωνώ с <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
+</label>
+<input name="_redirect" type="hidden" value="thanks.html"/>
+<button type="submit">Изпрати заявка / Αποστολή αίτησης</button>
+</form>
+</section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
 <div class="testimonial">
@@ -640,17 +568,16 @@ header {
 </div>
 <div style="margin-top: 2rem;">
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
-<form action="https://formspree.io/f/movwnrdg" method="POST" enctype="multipart/form-data">
-<input type="hidden" name="_captcha" value="false">
+<form action="https://formspree.io/f/movwnrdg" enctype="multipart/form-data" method="POST">
+<input name="_captcha" type="hidden" value="false"/>
 <input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
 <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
 <label class="gdpr-label">
-<input name="gdpr" required="" type="checkbox"/>
+<input name="gdpr" required="" type="checkbox">
   Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
-</label>
+</input></label>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη"/>
-
 </form>
 </div>
 </section>
@@ -664,8 +591,6 @@ header {
 <p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
 <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
-
-
 <script>
 document.addEventListener("DOMContentLoaded", function () {
   const forms = document.querySelectorAll("form[action*='formspree.io']");
@@ -713,7 +638,5 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 </script>
-
-
 </body>
 </html>
